dokuwiki/dokuwiki-ingressroute-https-longhorn.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-redirect-scheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikilh-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wikilh.example.com`) 
      kind: Rule
      middlewares:
        - name: nginx-redirect-scheme
      services:
        - name: wikilh-dokuwiki
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wikilh-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wikilh.example.com`)
      kind: Rule
      services:
        - name: wikilh-dokuwiki
          port: 80
  tls:
    certResolver: pebble
